syntax = "proto3";

package booking_service;

service DoctorAvailabilityService {
  //DoctorAvailability
  rpc CreateDoctorAvailability(CreatedDoctorAvailability) returns (DoctorAvailability);
  rpc GetDoctorAvailability(FieldValueReq) returns (DoctorAvailability);
  rpc GetAllDoctorAvailabilitys(GetAllReq) returns (DoctorAvailabilitysType);
  rpc UpdateDoctorAvailability(UpdateDoctorAvailabilityReq) returns (DoctorAvailability);
  rpc DeleteDoctorAvailability(FieldValueReq) returns (StatusRes);
}

//

message DoctorAvailability{
  int64 Id = 1;
  string DepartmentId = 2;
  string DoctorId = 3;
  string DoctorDate = 4;
  string StartTime = 5;
  string EndTime = 6;
  string Status = 7;
  string CreatedAt = 8;
  string UpdatedAt = 9;
  string DeletedAt = 10;
}

message  DoctorAvailabilitysType{
  int64 Count = 1;
  repeated DoctorAvailability Doctor_Availabilitys = 2;
}

message CreatedDoctorAvailability{
  string DepartmentId = 1;
  string DoctorId = 2;
  string DoctorDate = 3;
  string StartTime = 4;
  string EndTime = 5;
  string Status = 6;
}

message UpdateDoctorAvailabilityReq{
  string Field = 1;
  string Value = 2;
  string DepartmentId = 3;
  string DoctorId = 4;
  string DoctorDate = 5;
  string StartTime = 6;
  string EndTime = 7;
  string Status = 8;
}

message FieldValueReq {
  string Field = 1;
  string Value = 2;
  bool DeleteStatus = 3;
}

message StatusRes {
  bool Status = 1;
}

message GetAllReq {
  string Field = 1;
  string Value = 2;
  bool DeleteStatus = 3;
  uint64 Page = 4;
  uint64 Limit = 5;
  string OrderBy = 6;
}